Fix resume section not responsive on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .section-bg h2 {
-    font-family: "Playfair Display", serif;
+    font-family: "Gelasio", serif;
     color: var(----primary-light-color);
     position: relative;
     margin-bottom: 1rem;
@@ -34,6 +34,11 @@ body {
     bottom: -7px;
     left: 0;
     border-radius: 3px;
+}
+
+.section-bg h3 {
+    font-family: "Quicksand", sans-serif;
+    color: var(--secondary-color);
 }
 
 /* Links */
